[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "condascout"
version = "0.1.0"
description = "CLI tool to look for the best conda environment which satisfies certain requirements"
readme = "readme.md"
authors = [{ name = "Steve Immanuel", email = "iam.steve.immanuel@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["conda", "anaconda", "miniconda"]
dependencies = [
    "rich",
    "packaging",
    "pyyaml"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "bumpver"]

[project.scripts]
condascout = "condascout:cli.main"

[project.urls]
Homepage = "https://github.com/SteveImmanuel/condascout"

[tool.pytest.ini_options]
pythonpath = ["condascout"]

[tool.bumpver]
current_version = "0.1.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = false
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"condascout/__init__.py" = ["{version}"]